--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ h1 {
 nav ol li {
   font-family: 'PT Sans', sans-serif;
   color: #8f2440;
+
 }
 
 nav ol li a {
@@ -17,4 +18,8 @@ nav ol li a {
 
 figure figcaption {
   font-style: italic;
+}
+
+dt {
+  font-weight: bold;
 }
